APB-576 adds provider buttons supprt in common_dialogue_user_start component, reorder event items in admin, removes z-index and modal comments in components, removes z-index for common_user_edit_avatar_img, makes updateOnlineStatus async,saves null in user_preference_save() to avoid error id missing, adds identity provider in serverRoutes, dialogue_user_edit checks user provider id

--- a/apps/common/public/css/common_app.css
+++ b/apps/common/public/css/common_app.css
@@ -616,7 +616,6 @@ select {
 	width:48px;
 	height:48px;
 	border-radius: 50%;
-	z-index: -1;
 }
 #common_user_edit_input_avatar_img{
 	display:none;
